docs: 添加```更新用户组```文档
